@@ -118,30 +118,6 @@ public class ProjectService {
         dto.setVersion(project.getVersion());
         dto.setCreationDate(project.getCreationDate());
         dto.setLastUpdate(project.getLastUpdate());
-
-        //todo ---- O CODIGO COMENTADO NAO E PARA SER APAGADO
-//        List<String> requirementAnalysts = teamRepository.findByProjectIdAndUserRole(project.getId(), Role.ANALISTA_DE_REQUISITOS)
-//                .stream()
-//                .map(Team::getUserName)
-//                .collect(Collectors.toList());
-//        dto.setRequirementAnalysts(requirementAnalysts);
-//
-//        List<String> businessAnalysts = teamRepository.findByProjectIdAndUserRole(project.getId(), Role.ANALISTA_DE_NEGOCIO)
-//                .stream()
-//                .map(Team::getUserName)
-//                .collect(Collectors.toList());
-//        dto.setBusinessAnalysts(businessAnalysts);
-//
-//        List<String> commonUsers = teamRepository.findByProjectIdAndUserRole(project.getId(), Role.USUARIO_COMUM)
-//                .stream()
-//                .map(Team::getUserName)
-//                .collect(Collectors.toList());
-//        dto.setCommonUsers(commonUsers);
-
-//        dto.setRequirementIds(project.getRequirements() != null ? project.getRequirements().stream()
-//                .map(requirement -> requirement.getId())
-//                .collect(Collectors.toList()) : new ArrayList<>());
-
         return dto;
     }
 
@@ -163,13 +139,13 @@ public class ProjectService {
             List<Team> newTeams = new ArrayList<>();
             newTeams.addAll(requestDTO.getRequirementAnalysts().stream()
                     .map(userId -> createTeam(userId, existingProject))
-                    .collect(Collectors.toList()));
+                    .toList());
             newTeams.addAll(requestDTO.getBusinessAnalysts().stream()
                     .map(userId -> createTeam(userId, existingProject))
-                    .collect(Collectors.toList()));
+                    .toList());
             newTeams.addAll(requestDTO.getCommonUsers().stream()
                     .map(userId -> createTeam(userId, existingProject))
-                    .collect(Collectors.toList()));
+                    .toList());
 
             existingProject.setTeams(newTeams);
 
@@ -184,15 +160,8 @@ public class ProjectService {
     @Transactional
     public void deleteById(Long id) {
         if (projectRepository.existsById(id)) {
-            // Adicionar log para depuração
-            System.out.println("Deleting project artifacts for project id: " + id);
             projectArtifactService.deleteArtifactsByProjectId(id);
-
-            // Adicionar log para depuração
-            System.out.println("Deleting project with id: " + id);
             projectRepository.deleteById(id);
-
-            // Verificar se o projeto foi realmente deletado
             if (projectRepository.existsById(id)) {
                 throw new ResponseStatusException(HttpStatus.INTERNAL_SERVER_ERROR, "Failed to delete project with id: " + id);
             }
